[gd_scene load_steps=43 format=3 uid="uid://b82se4wd684p2"]

[ext_resource type="Script" path="res://Scenes/Player/player_character.gd" id="1_otumk"]
[ext_resource type="Material" uid="uid://ddxdry6i1fggp" path="res://Scenes/Player/outline_shader.tres" id="4_fqjb8"]
[ext_resource type="Script" path="res://Scenes/Misc/effect_audio_player.gd" id="4_msi58"]
[ext_resource type="Texture2D" uid="uid://gmvkwwuh4a77" path="res://Art/Player/PlayerSprite.png" id="5_sdmnc"]
[ext_resource type="Script" path="res://Scenes/Misc/state_machine/debug_state_machine_label.gd" id="8_u0rhq"]
[ext_resource type="Script" path="res://Scenes/Player/player_state_machine.gd" id="9_c2ogj"]
[ext_resource type="PackedScene" uid="uid://c1pstklyl2kp1" path="res://Scenes/Effects/death_particles.tscn" id="10_iq7bk"]
[ext_resource type="Script" path="res://Scenes/Player/States/idle.gd" id="10_ycp14"]
[ext_resource type="Script" path="res://Scenes/Player/States/run.gd" id="11_cvhcd"]
[ext_resource type="Script" path="res://Scenes/Player/States/jump.gd" id="12_nvavq"]
[ext_resource type="Script" path="res://Scenes/Player/States/falling.gd" id="13_q85jw"]
[ext_resource type="Script" path="res://Scenes/Player/States/dash.gd" id="14_sglpw"]
[ext_resource type="Script" path="res://Scenes/Player/States/special_attack.gd" id="15_7l818"]
[ext_resource type="Script" path="res://Scenes/Player/States/sliding.gd" id="16_01rhr"]
[ext_resource type="Script" path="res://Scenes/Player/States/entrance.gd" id="17_776qv"]
[ext_resource type="Script" path="res://Scenes/Player/States/damaged.gd" id="19_p8egc"]
[ext_resource type="Script" path="res://Scenes/Player/States/die.gd" id="22_ta164"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_70gom"]
size = Vector2(28, 35)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8v5uu"]
size = Vector2(32, 39)

[sub_resource type="Animation" id="Animation_2ci3x"]
resource_name = "Damaged_Loop"
length = 0.2
loop_mode = 1
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [10, 11, 12]
}

[sub_resource type="Animation" id="Animation_tesic"]
resource_name = "Damaged_Start"
length = 0.125
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [9]
}

[sub_resource type="Animation" id="Animation_clase"]
resource_name = "Dash_End"
length = 0.4

[sub_resource type="Animation" id="Animation_g5a5r"]
resource_name = "Dash_Loop"
length = 0.35
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [28, 29, 30, 31]
}

[sub_resource type="Animation" id="Animation_j77q0"]
resource_name = "Dash_Start"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [26, 27]
}

[sub_resource type="Animation" id="Animation_cendp"]
resource_name = "Die"
length = 0.55
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.075, 0.15, 0.225, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_8khiu"]
resource_name = "Disengage"
length = 0.5
step = 0.025
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_7rt8t"]
resource_name = "Dive"
length = 0.45
step = 0.025

[sub_resource type="Animation" id="Animation_yri23"]
resource_name = "Entrance"
length = 0.8
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [7, 5, 0]
}

[sub_resource type="Animation" id="Animation_1xpcr"]
resource_name = "Falling"
length = 0.3
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [7]
}

[sub_resource type="Animation" id="Animation_mjnkt"]
resource_name = "Flash"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 7]
}

[sub_resource type="Animation" id="Animation_jlkc0"]
resource_name = "Idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.9, 1, 1.1),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 2]
}

[sub_resource type="Animation" id="Animation_pyjbh"]
resource_name = "Jump"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [5, 6]
}

[sub_resource type="Animation" id="Animation_xpg37"]
resource_name = "Land"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_673aj"]
resource_name = "Parry"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [35, 36]
}

[sub_resource type="Animation" id="Animation_ojqax"]
resource_name = "Plasma_Shot"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [23, 24]
}

[sub_resource type="Animation" id="Animation_ydw3r"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_x3up6"]
resource_name = "Run"
length = 0.8
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [14, 15, 16, 17, 18, 19, 20, 21]
}

[sub_resource type="Animation" id="Animation_ac6w5"]
resource_name = "Run_Start"
length = 0.1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [26]
}

[sub_resource type="Animation" id="Animation_mfwir"]
resource_name = "Upper"
step = 0.025
tracks/0/type = "method"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.275),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [0.525],
"method": &"upper"
}]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PlayerSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_fom4x"]
resource_name = "Wall_Slide"
length = 0.3
step = 0.075
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [33]
}

[sub_resource type="Animation" id="Animation_836ij"]
resource_name = "Punch"
length = 0.7
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.65),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 26, 27, 28, 29, 30, 31, 27, 26]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_xj4p7"]
_data = {
"Damaged_Loop": SubResource("Animation_2ci3x"),
"Damaged_Start": SubResource("Animation_tesic"),
"Dash_End": SubResource("Animation_clase"),
"Dash_Loop": SubResource("Animation_g5a5r"),
"Dash_Start": SubResource("Animation_j77q0"),
"Die": SubResource("Animation_cendp"),
"Disengage": SubResource("Animation_8khiu"),
"Dive": SubResource("Animation_7rt8t"),
"Entrance": SubResource("Animation_yri23"),
"Falling": SubResource("Animation_1xpcr"),
"Flash": SubResource("Animation_mjnkt"),
"Idle": SubResource("Animation_jlkc0"),
"Jump": SubResource("Animation_pyjbh"),
"Land": SubResource("Animation_xpg37"),
"Parry": SubResource("Animation_673aj"),
"Plasma_Shot": SubResource("Animation_ojqax"),
"Punch": SubResource("Animation_836ij"),
"RESET": SubResource("Animation_ydw3r"),
"Run_Loop": SubResource("Animation_x3up6"),
"Run_Start": SubResource("Animation_ac6w5"),
"Upper": SubResource("Animation_mfwir"),
"Wall_Slide": SubResource("Animation_fom4x")
}

[node name="PlayerCharacter" type="CharacterBody2D" groups=["Player"]]
texture_filter = 1
collision_mask = 28
floor_constant_speed = true
floor_max_angle = 0.872665
floor_snap_length = 15.0
script = ExtResource("1_otumk")

[node name="PhysicalCollision" type="CollisionShape2D" parent="."]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_70gom")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 16

[node name="HurtCollision" type="CollisionShape2D" parent="Hurtbox"]
position = Vector2(0, 1.5)
shape = SubResource("RectangleShape2D_8v5uu")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_xj4p7")
}

[node name="ShotTimer" type="Timer" parent="."]
wait_time = 0.35
one_shot = true

[node name="InvulnTimer" type="Timer" parent="."]
one_shot = true

[node name="CoyoteTimer" type="Timer" parent="."]
wait_time = 0.15
one_shot = true

[node name="RightRCast" type="RayCast2D" parent="."]
target_position = Vector2(17, 0)
collision_mask = 16

[node name="LeftRCast" type="RayCast2D" parent="."]
target_position = Vector2(-17, 0)
collision_mask = 16

[node name="Death Particles" parent="." instance=ExtResource("10_iq7bk")]

[node name="BusterPosition" type="Marker2D" parent="."]
position = Vector2(21, -2)

[node name="DustPosition" type="Marker2D" parent="."]
position = Vector2(-13, 19)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
process_mode = 3
volume_db = -15.928
script = ExtResource("4_msi58")

[node name="PlayerSprite" type="Sprite2D" parent="."]
material = ExtResource("4_fqjb8")
texture = ExtResource("5_sdmnc")
hframes = 4
vframes = 10
frame = 1

[node name="DebugStateMachineLabel" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -21.0
offset_top = -39.0
offset_right = 19.0
offset_bottom = -16.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
script = ExtResource("8_u0rhq")
state_machine = NodePath("../PlayerStateMachine")

[node name="PlayerStateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("9_c2ogj")
initial_state = NodePath("Entrance")

[node name="Idle" type="Node" parent="PlayerStateMachine"]
script = ExtResource("10_ycp14")

[node name="Run" type="Node" parent="PlayerStateMachine"]
script = ExtResource("11_cvhcd")

[node name="Jump" type="Node" parent="PlayerStateMachine"]
script = ExtResource("12_nvavq")

[node name="Falling" type="Node" parent="PlayerStateMachine"]
script = ExtResource("13_q85jw")

[node name="Dash" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_sglpw")

[node name="Timer" type="Timer" parent="PlayerStateMachine/Dash"]
one_shot = true

[node name="Special Attack" type="Node" parent="PlayerStateMachine"]
script = ExtResource("15_7l818")

[node name="Sliding" type="Node" parent="PlayerStateMachine"]
script = ExtResource("16_01rhr")

[node name="Entrance" type="Node" parent="PlayerStateMachine"]
script = ExtResource("17_776qv")

[node name="Damaged" type="Node" parent="PlayerStateMachine"]
script = ExtResource("19_p8egc")

[node name="Timer" type="Timer" parent="PlayerStateMachine/Damaged"]
one_shot = true

[node name="Die" type="Node" parent="PlayerStateMachine"]
script = ExtResource("22_ta164")

[connection signal="body_entered" from="Hurtbox" to="." method="_on_hurtbox_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="PlayerStateMachine/Special Attack" method="_on_animation_player_animation_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="PlayerStateMachine/Entrance" method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_shot_timer_timeout"]
[connection signal="timeout" from="PlayerStateMachine/Dash/Timer" to="PlayerStateMachine/Dash" method="_on_timer_timeout"]
[connection signal="timeout" from="PlayerStateMachine/Damaged/Timer" to="PlayerStateMachine/Damaged" method="_on_timer_timeout"]
